==> Zurabik/LCD_Termometr/LCD_T/radio.c <==
#include "radio.h"
#define CHANNEL 110
#define ADDRESS_LENGTH 5
#define ACK_W_PAYLOAD_ENABLE 1 //Используем ответ с данными(необходимо настроить: авторетрансмит, автоответ, динамическая длинна пакета)
#define CE_DDR          DDRC
#define CE_PORT         PORTC
#define CE_PIN          PINC1
#define CSN_DDR         DDRB
#define CSN_PORT        PORTB
#define CSN_PIN         PINB2
#define CSN_HIGH()      CSN_PORT |=  _BV(CSN_PIN);
#define CSN_LOW()       CSN_PORT &= ~_BV(CSN_PIN);
#define CE_HIGH()       CE_PORT |=  _BV(CE_PIN);
#define CE_LOW()        CE_PORT &= ~_BV(CE_PIN);

static uint8_t get_status()
{
        uint8_t status = 0;
        CSN_LOW();

        status = SPI_Write_Byte(NOP);

        CSN_HIGH();

        return status;
}

static uint8_t set_register(radio_register_t reg, uint8_t* value, uint8_t len)
{
        uint8_t status;
        CSN_LOW();

        status = SPI_Write_Byte(W_REGISTER | (REGISTER_MASK & reg));
        SPI_Write_Block(value, len);

        CSN_HIGH();

        return status;
}

static uint8_t get_register(radio_register_t reg, uint8_t* buffer, uint8_t len)
{
        uint8_t status, i;
        for (i = 0; i < len; i++)
        {
                // If the buffer is too long for the register results, then the radio will interpret the extra bytes as instructions.
                // To remove the risk, we set the buffer elements to NOP instructions.
                buffer[i] = 0xFF;
        }
        CSN_LOW();

        status = SPI_Write_Byte(R_REGISTER | (REGISTER_MASK & reg));
        SPI_ReadWrite_Block(NULL, buffer, len);

        CSN_HIGH();

        return status;
}

static void send_instruction(uint8_t instruction, uint8_t* data, uint8_t* buffer, uint8_t len)
{
    CSN_LOW();
        // send the instruction
        SPI_Write_Byte(instruction);
        // pass in args
        if (len > 0)
        {
                if (buffer == NULL)     //
                        SPI_Write_Block(data, len);
                else
                        SPI_ReadWrite_Block(data, buffer, len);
        }
    // resynch SPI
    CSN_HIGH();
}

static void configure_registers()
{
        uint8_t value;

        SPI_Init();
/************************************************************************/
/*Setup of Address Widths                                               */
/************************************************************************/
        // set address width to 5 bytes.
        value = ADDRESS_LENGTH - 2;                     // 0b11 for 5 bytes, 0b10 for 4 bytes, 0b01 for 3 bytes
        set_register(SETUP_AW, &value, 1);
/************************************************************************/
/*Setup of Automatic Retransmission										*/
/************************************************************************/
        // set Enhanced Shockburst retry to every 586 us, up to 5 times.  If packet collisions are a problem even with AA enabled,
        // then consider changing the retry delay to be different on the different stations so that they do not keep colliding on each retry.
        /*
		Auto Retransmit Delay
		‘0000’ – Wait 250µS
		‘0001’ – Wait 500µS
		‘0010’ – Wait 750µS
		……..
		‘1111’ – Wait 4000µS
		(Delay defined from end of transmission to start of
		next transmission)
		
		Auto Retransmit Count
		‘0000’ –Re-Transmit disabled
		‘0001’ – Up to 1 Re-Transmit on fail of AA
		……
		‘1111’ – Up to 15 Re-Transmit on fail of AA
		*/
		value = (1<<ARD)|(9<<ARC);//9 повторов передачи каждые 500 мкс
		//value = 0x15;
        //value = 0x10;
        set_register(SETUP_RETR, &value, 1);
/************************************************************************/
/*Setup RF Channel														*/
/************************************************************************/
        // Set to use 2.4 GHz channel 110.
        value = CHANNEL;
        set_register(RF_CH, &value, 1);
/************************************************************************/
/* RF Setup Register													*/
/************************************************************************/
        // Set radio to 2 Mbps and high power.  Leave LNA_HCURR at its default.
        //value = _BV(RF_DR) | _BV(LNA_HCURR);
		//value = _BV(RF_DR_HIGH);
		value = (0<<RF_DR_LOW)|(0<<PLL_LOCK)|(1<<RF_DR_HIGH)|(3<<RF_PWR);
        set_register(RF_SETUP, &value, 1);
/************************************************************************/
/* Configuration Register												*/
/************************************************************************/
        // Enable 2-byte CRC and power up in receive mode.
        value = _BV(EN_CRC) | _BV(CRCO) | _BV(PWR_UP) | _BV(PRIM_RX);
        set_register(CONFIG, &value, 1);
/************************************************************************/
/* Очистка Status Register												*/
/************************************************************************/
        // clear the interrupt flags in case the radio's still asserting an old unhandled interrupt
		value = _BV(RX_DR) | _BV(TX_DS) | _BV(MAX_RT);
		set_register(STATUS, &value, 1);
/************************************************************************/
/* FEATURE регистр											*/
/************************************************************************/
// разрешим динамическую длинну пакета, ответ с пакетом
value = (1<<EN_DPL)|(1<<EN_ACK_PAY);
set_register(FEATURE, &value, 1);
/************************************************************************/
/* DYNPD регистр											*/
/************************************************************************/
// разрешим динамическую длинну пакета для канала 0
value = (1<<DPL_P0);
set_register(DYNPD, &value, 1);
/************************************************************************/
/* Очистка буфера приема и передачи										*/
/************************************************************************/
    // flush the FIFOs in case there are old data in them.
	//Radio_Flush();
       send_instruction(FLUSH_TX, NULL, NULL, 0);
       send_instruction(FLUSH_RX, NULL, NULL, 0);
}

void Radio_Init()
{
        transmit_lock = 0;				// disable radio during config
        CE_LOW();

        // set as output AT90 pins connected to the radio's slave select and chip enable pins.
        CE_DDR |= _BV(CE_PIN);
        CSN_DDR |= _BV(CSN_PIN);

        // Enable radio interrupt.  This interrupt is triggered when data are received and when a transmission completes.
//		DDRC &= ~_BV(PIND2);			// настраиваем прерывания INT0
//		EICRA = (0<<ISC01)|(1<<ISC00);	// настраиваем прерывания INT0
//		EIMSK = (1<<INT0);				// настраиваем прерывания INT0


         DDRC &= ~_BV(PINC0);
         PCICR = (1<<PCIE1);
//		 PCICR |= _BV(PCIE1);// настраиваем прерывания PCINT8
		 PCMSK1 = (1<<PCINT8);
 //        PCMSK1 |= _BV(PCINT8);// настраиваем прерывания PCINT8
// 		EICRB |= _BV(ISC71);
//         EICRB &= ~_BV(ISC70);
//         EIMSK |= _BV(INT7);

        // A 10.3 ms delay is required between power off and power on states (controlled by 3.3 V supply).
        _delay_ms(11);

        // Configure the radio registers that are not application-dependent.
        configure_registers();

        // A 1.5 ms delay is required between power down and power up states (controlled by PWR_UP bit in CONFIG)
        _delay_ms(2);

        // enable radio as a receiver
        CE_HIGH();
}

uint8_t Radio_Transmit(radiopacket_t* payload, uint8_t *tx_addr, RADIO_TX_WAIT wait)
{
        //if (block && transmit_lock) while (transmit_lock);
        //if (!block && transmit_lock) return 0;
    uint8_t len = 32;
	//uint8_t max_delay = 0;
        // indicate that the driver is transmitting.
    transmit_lock = 1;

     
 // disable the radio while writing to the Tx FIFO.
    CE_LOW();

    //set_tx_mode();
	set_mode(RADIO_PRIM_TX, RADIO_DELAY_DISABLE);
    // for auto-ack to work, the pipe0 address must be set to the Tx address while the radio is transmitting.
    // The register will be set back to the original pipe 0 address when the TX_DS or MAX_RT interrupt is asserted.
    set_register(RX_ADDR_P0, (uint8_t*)tx_addr, ADDRESS_LENGTH);
	set_register(TX_ADDR, (uint8_t*)tx_addr, ADDRESS_LENGTH);
	// Записываем пакет в ТХ FIFO буфер для передачи
 	send_instruction(W_TX_PAYLOAD, payload, NULL, len);
    // Начинаем передачу
    CE_HIGH();
	_delay_us(11);// подождем положенные 10 мкс
	CE_LOW();
    if (wait == RADIO_WAIT_FOR_TX) 
    {
		while (transmit_lock)
		return tx_last_status;//сдесь будет либо "RADIO_TX_SUCCESS"-отправили успешно, либо "RADIO_TX_MAX_RT"-попытки передать не увеньчались успехом

		//printf("ждемс...");
       // while (transmit_lock || max_delay<90) //собсно ждемс...
		//	{
		//		_delay_ms(1);
		//		max_delay++;
		//	}
		//printf("дождались!!");
		//if(transmit_lock!=1)
		//	{
		//		printf("ok");
		//		return tx_last_status;//сдесь будет либо "RADIO_TX_SUCCESS"-отправили успешно, либо "RADIO_TX_MAX_RT"-попытки передать не увеньчались успехом
		//	}
		//	else
		//	{
		//		printf("no ok");
		//		return RADIO_TX_MAX_RT; // "RADIO_TX_MAX_RT"-попытки передать не увеньчались успехом
		//	}
	}
	else
	{
		//данные кудато , наверное, переданы
		return RADIO_TX_SUCCESS;
	}

	
    
}

RADIO_RX_STATUS Radio_Receive(radiopacket_t* buffer)
{
        uint8_t len = 32;
		//uint8_t len_rx_pl=0;
        uint8_t status;
        uint8_t pipe_number;
        uint8_t doMove = 1;
        RADIO_RX_STATUS result;

        transmit_lock = 0;

        CE_LOW();

		status = get_status();
		
        pipe_number =  (status & 0xE) >> 1;
		//printf("Номер канала по которому принят пакет %u .", pipe_number);
        if (pipe_number == RADIO_PIPE_EMPTY)
        {
                result = RADIO_RX_FIFO_EMPTY;
                doMove = 0;
        }

        if (rx_pipe_widths[pipe_number] > len)
        {
                // the buffer isn't big enough, so don't copy the data.
                result = RADIO_RX_INVALID_ARGS;
                doMove = 0;
        }

        if (doMove)
        {
                // попробуем так:
				//send_instruction(R_RX_PL_WID, NULL, len_rx_pl, NULL);
				//printf("длинна пакета %u .", len_rx_pl);
				//send_instruction(R_RX_PAYLOAD, (uint8_t*)buffer, (uint8_t*)buffer, len_rx_pl);
				// Move the data payload into the local
                send_instruction(R_RX_PAYLOAD, (uint8_t*)buffer, (uint8_t*)buffer, rx_pipe_widths[pipe_number]);

                status = get_status();
                pipe_number =  (status & 0xE) >> 1;

                if (pipe_number != RADIO_PIPE_EMPTY)
                        result = RADIO_RX_MORE_PACKETS;
                else
                        result = RADIO_RX_SUCCESS;
        }

        CE_HIGH();

        transmit_lock = 0;

        //release_radio();

        return result;
}
